[package]
name = "SI-Remover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
serenity = "0.12.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = [] }
